@@ -3755,6 +3755,11 @@ static void _reset_step_bitmaps(struct job_record *job_ptr)
 		}
 		if (step_ptr->step_node_bitmap)
 			step_alloc_lps(step_ptr);
+		else if (step_ptr->batch_step == 0) {
+			error("Missing node_list for step_id %u.%u", 
+			      job_ptr->job_id, step_ptr->step_id);
+			delete_step_record (job_ptr, step_ptr->step_id);
+		}
 	}
 
 	list_iterator_destroy (step_iterator);
